dashboard/yaml/01_redis-deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: redis
  namespace: t5g-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: registry.redhat.io/rhel8/redis-6
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /var/lib/redis/data
              name: redis-vol
      volumes:
        - name: redis-vol
          persistentVolumeClaim:
            claimName: redis-vol-pvc
