dashboard/yaml/03_t5gweb-app-deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: t5gweb-app
  namespace: t5g-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: t5gweb-app
  template:
    metadata:
      labels:
        app: t5gweb-app
    spec:
      containers:
      - name: t5gweb-app
        image: image-registry.openshift-image-registry.svc.cluster.local:5000/t5g-web/t5gweb:latest
        imagePullPolicy: Always
        command: [
          "/bin/sh",
          "-c",
          "gunicorn --bind 0.0.0.0:8080 --timeout 1200 wsgi:app",
          ]
