dashboard/yaml/07_t5gweb-tasks-deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: t5gweb-tasks
  namespace: t5g-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: t5gweb-tasks
  template:
    metadata:
      labels:
        app: t5gweb-tasks
    spec:
      containers:
      - name: celery-worker
        image: image-registry.openshift-image-registry.svc.cluster.local:5000/t5g-web/t5gweb:latest
        imagePullPolicy: Always
        command: [
          "/bin/sh",
          "-c",
          "celery -A t5gweb.taskmgr worker -B -E -s /celery/tasks",
          ]
        volumeMounts:
        - mountPath: /celery
          name: tasks-vol
      - name: celery-ui
        image: image-registry.openshift-image-registry.svc.cluster.local:5000/t5g-web/t5gweb:latest
        imagePullPolicy: Always
        command: [
          "/bin/sh",
          "-c",
          "celery -A t5gweb.taskmgr flower --address=0.0.0.0 --port=8080 --url_prefix=taskmgr",
          ]
      volumes:
      - name: tasks-vol
        persistentVolumeClaim:
          claimName: tasks-vol-pvc
