dashboard/yaml/02_redis-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: t5g-web
  labels:
    app: redis
spec:
  ports:
  - port: 6379
    name: redis
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis
