dashboard/yaml/04_t5gweb-app-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: t5gweb
  namespace: t5g-web
  labels:
    app: t5gweb
spec:
  ports:
  - port: 80
    name: t5gweb-http
    protocol: TCP
    targetPort: 8080
  selector:
    app: t5gweb
