dashboard/yaml/05_t5gweb-route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: t5gweb-app
  name: t5gweb-app
  annotations:
    haproxy.router.openshift.io/timeout: 10m
  namespace: t5g-web
spec:
  host: URL
  to:
    kind: Service
    name: t5gweb-app
