dashboard/yaml/06_t5gweb-route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: t5gweb
  name: t5gweb
  annotations:
    haproxy.router.openshift.io/timeout: 10m
  namespace: t5g-web
spec:
  host: t5g-report.se-apps.redhat.com
  to:
    kind: Service
    name: t5gweb
