dashboard/yaml/09_t5gweb-tasks-route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: t5gweb-tasks
  name: t5gweb-tasks
  annotations:
    haproxy.router.openshift.io/timeout: 10m
  namespace: t5g-web
spec:
  host: URL
  path: "/taskmgr"
  to:
    kind: Service
    name: t5gweb-tasks
